# py

./: .readthedocs.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml
doc/: conf.py  index.rst
khaeru/: __init__.py  apt_or_pip.py  ceic.py  claws_strip_replies.py  dedupe.py  disqus_export.py  git_all.py  imgdupe.py  kdx.py  maildupe.py  mh_to_maildir.py  music.py  pim.py  prep_release.py  rclone_push.py
khaeru/bugwarrior/: __init__.py
khaeru/obsidian/: __init__.py
khaeru/old/: synergy-kd.sh  synergy.sh
khaeru/pelican/: bibliography.py  instapaper_list.py  ipython.py
khaeru/script/: task-dedupe.sh
khaeru/task/: __init__.py  common.py  notify.py
khaeru/tol/: distinct_colours.py  matplotlib_ref_density.py
