[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
name = "khaeru"
description = "Python miscellany & toolbox"
authors = [
  {name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name"}
]
readme = "README.rst"
dependencies = [
    "click",
    "tqdm",
]

[project.urls]
homepage = "https://github.com/khaeru/py"

[project.optional-dependencies]
all = [
    "khaeru[disqus-export]",
    "khaeru[git-all]",
    "khaeru[pelican]",
    "khaeru[prep-release]",
    "khaeru[pim]",
    "khaeru[rclone-push]",
    "khaeru[task-slack]",
]
disqus-export = ["disqusapi"]
git-all = [
    "colorama",
    "GitPython",
]
pelican = [
    "docutils",
    "IPython",
    "pelican",
    "pybtex",
    "sphinx",
]
prep-release = ["packaging"]
pim = ["xdg"]
rclone-push = [
    "GitPython",
    "PyYAML",
]
task-slack = ["pandas"]

[project.scripts]
# General entry-point for shell and other scripts
khaeru = "khaeru:cli"
# Submodules with their own CLI
apt-or-pip = "khaeru.apt_or_pip:main"
ceic = "khaeru.ceic:main"
dedupe = "khaeru.dedupe:cli"
git-all = "khaeru.git_all:main"
pim = "khaeru.pim:cli"
rclone-push = "khaeru.rclone_push:cli"
strip-replies = "khaeru.claws_strip_replies:main"
task-notify = "khaeru.task.notify:main"

[tool.isort]
profile = "black"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
