[metadata]
name = khaeru
author = Paul Natsuo Kishimoto
author_email = mail@paul.kishimoto.name
license = GPLv3
description = Python miscellany
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/khaeru/py

[options]
packages = khaeru
install_requires =
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm


[isort]
profile = black

[flake8]
max-line-length = 88
