[metadata]
name = khaeru
author = Paul Natsuo Kishimoto
author_email = mail@paul.kishimoto.name
license = GPLv3
description = Python miscellany
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/khaeru/py

[options]
packages = khaeru
install_requires =
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm


[options.entry_points]
console_scripts =
    dedupe = khaeru.dedupe:cli
    git-all = khaeru.git_all:main
    pim = khaeru.pim:cli
    rclone-push = khaeru.rclone_push:cli
    strip-replies = khaeru.claws_strip_replies:main
    task-notify = khaeru.task.notify:main


[isort]
profile = black

[flake8]
max-line-length = 88
